--- a/upcoming-matches.css
+++ b/upcoming-matches.css
@@ -1,9 +1,9 @@
 body{
     font-family: 'Roboto', sans-serif;
-    background-color:whitesmoke;
+        background-color: whitesmoke;
 }
 /* >> Top Banner Portion Starts Here>> */
-.container{
+.container {
     background-color: black;
     display: flex;
     flex-direction: row-reverse;
@@ -14,38 +14,44 @@ body{
     margin-top: 90px;
     margin-left: 100px;
     margin-right: 120px;
-    shadow:(0px 4px 4px rgba(0, 0, 0, 0.25));
+    shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
     image-orientation: right;
 }
-.top-banner{
+
+.top-banner {
     width: 40%;
     position: relative;
-    right:2%;
-    padding:5px;
+    right: 2%;
+    padding: 5px;
 }
+
 .header-1 {
     position: absolute;
-    top: 160px; ;
+    top: 160px;
+    ;
     left: 28%;
     transform: translate(-50%, -50%);
     font-size: 370%;
-    margin-top: 100px;;
-    color: azure}
+    margin-top: 100px;
+    ;
+    color: azure
+}
 
-        .paragraph-1 {
-            position: relative;
-            top: 103%;
-            right: 60px;
-            transform: translate(-50%, -50%);
-            font-size: medium;
-            color: azure;
-            font-weight: 550;
-        }
+.paragraph-1 {
+    position: relative;
+    top: 103%;
+    right: 60px;
+    transform: translate(-50%, -50%);
+    font-size: medium;
+    color: azure;
+    font-weight: 550;
+}
+
 .link-button {
     position: absolute;
     text-decoration: none;
     Top: 80%;
-    right:830px;
+    right: 830px;
     transform: translate(-50%, -50%);
     background-image: linear-gradient(rgba(166, 9, 9, 0.865), rgb(235, 16, 16));
     color: white;
@@ -54,19 +60,16 @@ body{
     font-size: medium;
 }
 
-.container-2{
+.container-2 {
     display: inline-block;
     text-decoration: none;
 }
 
-.nav-button{
-    
+.nav-button {
+
     text-align: left;
     margin-left: 110px;
-
-        
 }
-
 
 
 
@@ -78,15 +81,13 @@ body{
 .footer-sec {
     text-align: center;
     background-color: #272727;
-    color:white;
+    color: white;
     padding: 10px;
-width: 85%;
+    width: 85%;
     height: 200px;
     margin-top: 90px;
     margin-left: 100px;
     margin-right: 120px;
 }
-.fp-1,fp-2{
-    ;
-}
+
 /* ----Footer Section Ends----->> */
