--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color:whitesmoke;
+    margin: 0;
+    padding:0;
 }
+
 /* >> Top Banner Portion Starts Here>> */
 .container{
     background-color: black;
@@ -11,7 +14,7 @@ body{
     border-radius: 15px;
     width: 85%;
     height: 500px;
-    margin-top: 90px;
+    margin-top: 95px;
     margin-left: 100px;
     margin-right: 120px;
     shadow:(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -41,23 +44,41 @@ body{
             color: azure;
             font-weight: 550;
         }
+        
+        .button{
+            display: flex;
+            flex-direction: row;
+        }
 .link-button {
     position: absolute;
     text-decoration: none;
+    justify-content:space-between;
+    align-content: flex-start;
     Top: 80%;
-    right:830px;
+    right:820px;
+    font-size: larger;
     transform: translate(-50%, -50%);
     background-image: linear-gradient(rgba(166, 9, 9, 0.865), rgb(235, 16, 16));
     color: white;
-    padding: 10px 35px;
-    border-radius: 5px;
+    padding: 10px 45px;
+    border-radius: 2px;
     font-size: medium;
 }
-
+.play {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    margin-left: 27%;
+    top:79%;
+    left: auto;
+    width: 100%;
+}
 .container-2{
     display: inline-block;
     text-decoration: none;
+    box-sizing: content-box;
 }
+
 
 .nav-button{
     
