--- a/style.css
+++ b/style.css
@@ -95,12 +95,13 @@ body{
             margin-top: 7%;
             margin-left: 100px;
             margin-right: 120px;
+            width:1300px;
         }
     
         .pages-link-box {
             display: flex;
             flex-direction: column;
-            width: 55%;
+            width: 40%;
             height: 50%;
             background: black;
             border-radius: 10px;
